tests/snapshots/snapshots__render_compact_mode.snap
---
source: tests/snapshots.rs
expression: term.backend()
---
"┌0 IPs discovered──────────────────────────────────────────────────────────────┐"
"│   IP                    Name(s)  Hits  Services                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
