tests/snapshots/snapshots__render_default.snap
---
source: tests/snapshots.rs
expression: term.backend()
---
"┌0 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP   Name     Hits  Services                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
