tests/snapshots/snapshots__render_default_config_editor_box.snap
---
source: tests/snapshots.rs
expression: term.backend()
---
"┌0 IPs discovered──────────────────────────────────────────────────────────────┐"
"│   IP     Name(s)  Hits  Services                                             │"
"│         Interfaces     Scan     Timeouts     UI   Config                     │"
"│       █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█       │"
"│       █ > Ignore Patterns          -                                 █       │"
"│       █   Include Docker           [ ]                               █       │"
"│       █                                       Regex patterns to      │       │"
"│       █                                       ignore network         │       │"
"│       █                                       interfaces             │       │"
"│       █                                       These patterns will be │       │"
"│       █                                       ───────────────────────┘       │"
"│       █                                                              █       │"
"│       █                                                              █       │"
"└───────█                                                              █───────┘"
" Log Lev█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█        "
"        ┌──────────────────────────────────────────────────────────────┐        "
"        │       <Ctrl+S>: save config | <Spacebar/Enter>: modify       │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"┌────────────────────────────────────v1.2.3────────────────────────────────────┐"
