tests/snapshots/snapshots__render_default_config_editor_box_next_tab.snap
---
source: tests/snapshots.rs
expression: term.backend()
---
"┌0 IPs discovered──────────────────────────────────────────────────────────────┐"
"│   IP   Name     Hits  Services                                               │"
"│         Interfaces     Scan     Timeouts     UI   Config                     │"
"│       █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█       │"
"│       █ > Service Discovery        [*]        Enable DNS service     │       │"
"│       █   TCP Ports                22, 80, 443discovery (DNS-SD)     │       │"
"│       █   I/O Threads              dynamic    When enabled, attempts │       │"
"│       █                                                              █       │"
"│       █                                                              █       │"
"│       █                                                              █       │"
"│       █                                                              █       │"
"│       █                                                              █       │"
"└───────█                                                              █───────┘"
"        █                                                              █        "
" Log Lev█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█        "
"        ┌──────────────────────────────────────────────────────────────┐        "
"        │       <Ctrl+S>: save config | <Spacebar/Enter>: modify       │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"┌────────────────────────────────────v1.2.3────────────────────────────────────┐"
