tests/snapshots/snapshots__render_default_search_box.snap
---
source: tests/snapshots.rs
expression: term.backend()
---
"┌0 IPs discovered───────────────┌───Search────┐────────────────────────────────┐"
"│   IP                    Name(s│             │es                              │"
"│                               └─────────────┘                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌────────────────────────────────────v1.2.3────────────────────────────────────┐"
